--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
 
         <p class="view"><a href="{{ site.github.repository_url }}/issues">Show issues</a></p>
 
+        <p class="view"><a href="http://www.apache.org/licenses/LICENSE-2.0">License <small>Apache License 2.0</small></a></p>
+
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
