--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,10 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        <p class="view"><a href="{{ "/quickstart/current" | absolute_url }}">Getting started</a></p>
+
+        <p class="view"><a href="{{ "/docs/current" | absolute_url }}">Documentation</a></p>
+
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
