--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,16 +22,10 @@
           <div id="project_links">
             <a href="{{ "/quickstart/current" | absolute_url }}">Get started!</a>
             <a href="{{ "/docs/current" | absolute_url }}">Documention</a>
-            <a href="{{ site.github.zip_url }}">Download</a>
+            <a href="{{ site.last_release.url }}">Download</a>
             <a href="{{ site.github.repository_url }}">GitHub</a>
           </div>
 
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
         </header>
     </div>
 
