--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <a id="project_title" href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</h1>
 
           <div id="project_links">
-            <a href="{{ "/quickstart/current" | absolute_url }}">Get started!</a>
+            <a href="{{ "/quickstart/" | absolute_url }}">Get started!</a>
             <a href="{{ "/docs/current" | absolute_url }}">Documention</a>
             <a href="{{ site.last_release.url }}">Download</a>
             <a href="{{ site.github.repository_url }}">GitHub</a>
