--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <header class="inner">
 
 
-          <a id="project_title" href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</h1>
+          <a id="project_title" href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</a>
 
           <div id="project_links">
             <a href="{{ "/quickstart/" | absolute_url }}">Get started!</a>
