--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,3 +21,5 @@
 .feature div { text-align: center; }
 .feature_icon_box { height: 110px; }
 .feature img { width: 100px; border: 0px; vertical-align: bottom; display: table-cell; }
+
+OL { counter-reset: item }
