--- a/_includes/codesample.html
+++ b/_includes/codesample.html
@@ -1,35 +1,4 @@
 <script type="text/javascript" src="/assets/scripts/prettify.js"></script>
+<script type="text/javascript" src="/assets/scripts/codesample.js"></script>
 <link rel="stylesheet" href="/assets/css/prettify.css"/>
-<script type="text/javascript">
-var pre = document.createElement('pre');
-pre.className = "highlight";
-var code = document.createElement('code');
-code.className = "prettyprint";
-pre.insertBefore(code, null);
-document.currentScript.parentNode.insertBefore(pre, document.currentScript)
-fetch('https://raw.githubusercontent.com/Hyperfoil/Hyperfoil/{{ site.last_release.tag }}/{{ include.src }}')
-  .then(function(response) {
-      if (!response.ok) {
-          fetch('https://raw.githubusercontent.com/Hyperfoil/Hyperfoil/master/{{ include.src }}')
-            .then(function(response) {
-                response.text().then(function (text) {
-{% if include.slice != nil %}
-                  var slice = "{{ include.slice }}".split(":");
-                  text = text.split(/\r?\n/).slice(slice[0], slice[1]).join("\n");
-{% endif %}
-                  code.innerHTML = text;
-                  prettyPrint();
-                })
-            })
-      } else {
-        response.text().then(function (text) {
-{% if include.slice != nil %}
-          var slice = "{{ include.slice }}".split(":");
-          text = text.split(/\r?\n/).slice(slice[0], slice[1]).join("\n");
-{% endif %}
-          code.innerHTML = text;
-          prettyPrint();
-        })
-      }
-  })
-</script>
+<script type="text/javascript">insertCodesample(document.currentScript, "{{ site.last_release.tag }}", "{{ include.src }}", "{{ include.slice | default: null }}");</script>
