Add REST API reference

--- a/_includes/codesample.html
+++ b/_includes/codesample.html
@@ -1,4 +1,4 @@
 <script type="text/javascript" src="/assets/scripts/prettify.js"></script>
 <script type="text/javascript" src="/assets/scripts/codesample.js"></script>
 <link rel="stylesheet" href="/assets/css/prettify.css"/>
-<script type="text/javascript">insertCodesample(document.currentScript, "{{ site.last_release.tag }}", "{{ include.src }}", "{{ include.slice | default: null }}");</script>
+<script type="text/javascript">insertCodesample(document.currentScript, "{{ include.tag | default: site.last_release.tag }}", "{{ include.src }}", "{{ include.slice | default: null }}");</script>
