Generate links before H2, H3 headers

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,3 +21,7 @@
 .feature div { text-align: center; }
 .feature_icon_box { height: 110px; }
 .feature img { width: 100px; border: 0px; vertical-align: bottom; display: table-cell; }
+
+.anchor { visibility: hidden ;}
+.anchor::before { content: '\00A7'; position: absolute; margin-left: -1.5ex; display: block; width: 1.5ex; font-size: 0.85em; padding-top: 0.15em; }
+h2:hover .anchor, h3:hover .anchor { visibility: visible; }
