--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+      function prependHeaders(){
+        $(this).prepend('<a class="anchor" href="#' + $(this).attr("id") + '"></a>')
+      }
+      $(function(){
+        $("h2").each(prependHeaders)
+        $("h3").each(prependHeaders)
+      })
+    </script>
 
 {% seo %}
   </head>
