Highlight jump target

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,3 +26,22 @@
 .anchor:hover { color: #C00000; }
 .anchor::before { content: '\00A7'; position: absolute; margin-left: -1.5ex; display: block; width: 1.5ex; font-size: 0.85em; padding-top: 0.15em; }
 h2:hover .anchor, h3:hover .anchor { visibility: visible; }
+
+:target { -webkit-animation: target-fade 2s; -moz-animation: target-fade 2s; -o-animation: target-fade 2s; animation: target-fade 2s; }
+
+@-webkit-keyframes target-fade {
+	from { color: red; }
+	to { color: inherit; }
+}
+@-moz-keyframes target-fade {
+	from { color: red; }
+	to { color: inherit; }
+}
+@-o-keyframes target-fade {
+	from { color: red; }
+	to { color: inherit; }
+}
+@keyframes target-fade {
+	from { color: red; }
+	to { color: inherit; }
+}
