--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,16 @@
           accordion: true,
         });
       });
+      function openMenu() {
+        $(this).addClass("open").css("display", "")
+        let levelUp = $(this).parent().parent()
+        if (levelUp.is("ul")) {
+          levelUp.each(openMenu)
+        }
+      }
       $(function() {
-        $('.active').parent().addClass("open").css("display", "")
+        $('.active').parent().each(openMenu)
+        $('.active').children().css("display", "")
       })
     </script>
 
@@ -53,7 +61,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
+    <div id="main_content_wrap" class="outer" style="min-height: 100%">
       {% if page.menu != false %}
       <section id="docs_nav_menu" class="inner" style="padding: 0px;">
         <div style="position:relative; left: -230px; top: 50px;">
