--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
 
           <div id="project_links">
             <a href="{{ "/quickstart/" | absolute_url }}">Get started!</a>
+            <a href="{{ "/docs/release_notes.html" | absolute_url }}">What's new?</a>
             <a href="{{ "/docs/" | absolute_url }}">Documention</a>
             <a href="{{ site.last_release.url }}">Download</a>
             <a href="{{ site.github.repository_url }}">GitHub</a>
