--- a/assets/css/jquery.navgoco.css
+++ b/assets/css/jquery.navgoco.css
@@ -25,7 +25,7 @@
 }
 
 .nav a {
-    color: #333;
+    color: var(--theme-color-dark);
     display: block;
     outline: none;
     text-decoration: none;
@@ -46,19 +46,19 @@
 }
 
 .nav a:hover, .nav li.active > a {
-    background-color: #8D8D8D;
-    color: #f5f5f5;
+    background-color: var(--theme-color-light);
+    color: var(--theme-color-super-light);
 }
 
 .nav > li.active > a  {
-background-color: #347DBE;
+background-color: var(--theme-color-base);
 }
 
 .nav li a {
     font-size: 16px;
     line-height: 18px;
     padding: 2px 10px;
-    background-color: #ddd;
+    background-color: var(--theme-color-very-light);
 }
 
 .nav > li > a {
@@ -76,14 +76,14 @@ ul#mysidebar {
 }
 
 .nav li.thirdlevel > a {
-    color: #248EC2;
+    color: var(--theme-color-base);
     font-weight:bold;
     padding-left:20px;
-    background-color: whitesmoke !important;
+    background-color: var(--theme-color-super-light) !important;
 }
 
 .nav ul li a {
-    background-color: #FAFAFA;
+    background-color: var(--theme-color-super-light);
 }
 
 .nav li a {
@@ -91,10 +91,10 @@ ul#mysidebar {
 }
 
 .nav li a:hover {
-    background-color: #8D8D8D;
+    background-color: var(--theme-color-light);
 }
 
 .nav ul li a {
-    border-top:1px solid whitesmoke;
+    border-top:1px solid var(--theme-color-super-light);
     padding-left:10px;
 }
