--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,12 +52,15 @@
         <header class="inner">
 
 
-          <a id="project_title" href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</a>
+          <a href="{{ site.url }}">
+            <img src="{{ 'assets/images/hyperfoil_reverse.png' | absolute_url }}" width="32" height="32" style="border: none; box-shadow: none; float: left; margin: 0px;">
+            <span id="project_title">{{ site.title | default: site.github.repository_name }}</span>
+          </a>
 
           <div id="project_links">
-            <a href="{{ "/quickstart/" | absolute_url }}">Get started!</a>
-            <a href="{{ "/docs/release_notes.html" | absolute_url }}">What's new?</a>
-            <a href="{{ "/docs/" | absolute_url }}">Documention</a>
+            <a href="{{ '/quickstart/' | absolute_url }}">Get started!</a>
+            <a href="{{ '/docs/release_notes.html' | absolute_url }}">What's new?</a>
+            <a href="{{ '/docs/' | absolute_url }}">Documention</a>
             <a href="{{ site.last_release.url }}">Download</a>
             <a href="{{ site.github.repository_url }}">GitHub</a>
           </div>
