--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,19 +67,21 @@ h1, h2, h3, h4, h5, h6 { font-family: "OpenSans";}
 	font-style: italic;
 	text-transform: uppercase;
 	font-weight: 400;
+	margin-right: 24px;
 }
 
 #project_links { position: absolute; right: 0; top: 11px; display: inline; }
 
-#project_links a { color: #fff; font-size: 20px; padding-left: 24px; }
+#project_links a { color: #fff; font-size: 20px; padding-left: 16px; }
 
 #header_wrap { background: none; background-color: var(--theme-color-base);}
 #header_wrap .inner { padding: 5px; }
 
 #main_content_wrap { background-color: var(--theme-color-super-light);  border-top: none;}
 
-#project_name { font-family: "ChangaOne"; font-style: italic; text-transform: uppercase; font-size: 48px; font-weight: 400; }
+#project_name { font-family: "ChangaOne"; font-style: italic; text-transform: uppercase; font-size: 48px; font-weight: 400; color: var(--theme-color-base) }
 #project_description { color: #778; }
+#project_description .anchor::before { content: ''}
 
 a { color: var(--theme-color-base); }
 
