--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
+    <div id="header_wrap">
         <header class="inner">
 
 
@@ -69,8 +69,8 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" style="min-height: 100%">
-      {% if page.menu != false %}
+    <div id="main_content_wrap" style="{% if page.main_wrap_full_height != false %} min-height: 100%; {% endif %}">
+      {% if page.menu != false and page.collection != "posts" %}
       <section id="docs_nav_menu" class="inner" style="padding: 0px;">
         <div style="position:relative; left: -230px; top: 50px;">
           {% include docs_menu.md %}
@@ -78,9 +78,39 @@
       </section>
       {% endif %}
       <section id="main_content" class="inner">
+        {% if page.collection == "posts" %}
+        <h1>{{ page.title }}</h1>
+        {% endif %}
         {{ content }}
+        {% if page.next %}
+        <a href="{{ page.next.url }}">Next: {{ page.next.title }}</a>
+        {% endif %}
+        {% if page.previous %}
+        <a href="{{ page.previous.url }}">Previous: {{ page.previous.title }}</a>
+        {% endif %}
       </section>
     </div>
+
+    {% if page.show_posts == true %}
+    <div style="background-color: var(--theme-color-light); border-top: none; ">
+      <section id="posts" class="inner">
+        <h3 style="color: white; text-shadow: var(--theme-color-dark) 0px 0px 10px;">News</h3>
+        {% for post in site.posts limit:5 %}
+            <a href="{{ post.url }}"><h4>{{ post.date | date: "%Y-%m-%d" }} {{ post.title }}</h4></a>
+            <div>{{ post.excerpt | strip_html }} <a href="{{ post.url }}">Read more</a></div>
+        {% endfor %}
+        <div style="margin-top: 16px"><a href="allposts.html">Show older posts...</a></div>
+      </section>
+    </div>
+    {% endif %}
+
+    <div id="footer_wrap">
+      <footer class="inner" style="color: var(--theme-color-super-light)">
+        Hyperfoil is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a><br>
+        You can reach us on <a href="https://hyperfoil.zulipchat.com/">Zulip</a>
+      </footer>
+    </div>
+
 
     {% if site.google_analytics %}
       <script>
