--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,9 @@
       {% endif %}
       <section id="main_content" class="inner">
         {% if page.collection == "posts" %}
+        <div class="postdate">
+          {{ page.date | date: "%Y-%m-%d" }}
+        </div>
         <h1>{{ page.title }}</h1>
         {% endif %}
         {{ content }}
@@ -95,11 +98,16 @@
     <div style="background-color: var(--theme-color-light); border-top: none; ">
       <section id="posts" class="inner">
         <h3 style="color: white; text-shadow: var(--theme-color-dark) 0px 0px 10px;">News</h3>
+        <div id="blogcontainer">
         {% for post in site.posts limit:5 %}
-            <a href="{{ post.url }}"><h4>{{ post.date | date: "%Y-%m-%d" }} {{ post.title }}</h4></a>
-            <div>{{ post.excerpt | strip_html }} <a href="{{ post.url }}">Read more</a></div>
+            <div class="blogbox">
+              <a href="{{ post.url }}"><h4>{{ post.title }}</h4></a>
+              <div>{{ post.excerpt | strip_html | truncatewords: 35 }}</div>
+              <div class="readmore"><a href="{{ post.url }}">READ MORE</a></div>
+            </div>
         {% endfor %}
-        <div style="margin-top: 16px"><a href="allposts.html">Show older posts...</a></div>
+        </div>
+        <div id="showolder"><a href="allposts.html">SHOW OLDER POSTS</a></div>
       </section>
     </div>
     {% endif %}
