--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,5 +171,6 @@ h2:hover .anchor, h3:hover .anchor { visibility: visible; }
 
 .prewrap { white-space: pre-wrap; }
 .hfterminal { color: #060; }
+.hfcaption { font-weight: bold; }
 .errorlog { color: #600; }
 .warnlog { color: #860; }
