Move search bar to layout, fix nav menu

--- a/_includes/reference.html
+++ b/_includes/reference.html
@@ -1,4 +1,4 @@
-<ul>
+<ul style="display: none;">
     {% include listitem.html title="Steps" link="/docs/reference_steps.html" %}
         {% include refcomp.html prefix="/docs/steps/step_" %}
     </li>
