--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,317 +4,478 @@
 @import "jekyll-theme-slate";
 
 :root {
-	--theme-color-base: #3075b1;
-	--theme-color-dark: #0f2f46;
-	--theme-color-light: #75abcf;
-	--theme-color-very-light: #d0e2ee;
-	--theme-color-super-light: #e0f1f7;
+  --theme-color-base: #3075b1;
+  --theme-color-dark: #0f2f46;
+  --theme-color-light: #75abcf;
+  --theme-color-very-light: #d0e2ee;
+  --theme-color-super-light: #e0f1f7;
 }
 
 @font-face {
-	font-family: "ChangaOne";
-	font-style: normal;
-	font-weight: 400;
-	src: url('../fonts/ChangaOne-Regular.ttf');
+  font-family: "ChangaOne";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/ChangaOne-Regular.ttf");
 }
 @font-face {
-	font-family: "ChangaOne";
-	font-style: italic;
-	font-weight: 400;
-	src: url('../fonts/ChangaOne-Italic.ttf');
+  font-family: "ChangaOne";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../fonts/ChangaOne-Italic.ttf");
 }
 
 @font-face {
-	font-family: "OpenSans";
-	font-style: normal;
-	font-weight: 400;
-	src: url('../fonts/OpenSans-Regular.ttf');
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/OpenSans-Regular.ttf");
 }
 @font-face {
-	font-family: "OpenSans";
-	font-style: normal;
-	font-weight: 700;
-	src: url('../fonts/OpenSans-Bold.ttf');
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/OpenSans-Bold.ttf");
 }
 @font-face {
-	font-family: "OpenSans";
-	font-style: italic;
-	font-weight: 400;
-	src: url('../fonts/OpenSans-Italic.ttf');
+  font-family: "OpenSans";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../fonts/OpenSans-Italic.ttf");
 }
 @font-face {
-	font-family: "OpenSans";
-	font-style: italic;
-	font-weight: 700;
-	src: url('../fonts/OpenSans-BoldItalic.ttf');
+  font-family: "OpenSans";
+  font-style: italic;
+  font-weight: 700;
+  src: url("../fonts/OpenSans-BoldItalic.ttf");
 }
 
-
-html, body {
-	height: 100%;
-	font-family: "OpenSans";
+html,
+body {
+  height: 100%;
+  font-family: "OpenSans";
 }
 
-.inner { max-width: 800px; }
+.inner {
+  max-width: 800px;
+}
 
-h1, h2, h3, h4, h5, h6 { font-family: "OpenSans";}
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "OpenSans";
+}
 
 #project_title {
-	font-size: 28px;
-	text-shadow: var(--theme-color-dark) 0px 0px 10px;
-	font-family: "ChangaOne";
-	font-style: italic;
-	text-transform: uppercase;
-	font-weight: 400;
-	margin-right: 24px;
+  font-size: 28px;
+  text-shadow: var(--theme-color-dark) 0px 0px 10px;
+  font-family: "ChangaOne";
+  font-style: italic;
+  text-transform: uppercase;
+  font-weight: 400;
+  margin-right: 24px;
 }
 
-#project_links { position: absolute; right: 0; top: 11px; display: inline; }
+#project_links {
+  position: absolute;
+  right: 0;
+  top: 11px;
+  display: inline;
+}
 
-#project_links a { color: #fff; font-size: 20px; padding-left: 16px; }
+#project_links a {
+  color: #fff;
+  font-size: 20px;
+  padding-left: 16px;
+}
 
-#header_wrap { background: none; background-color: var(--theme-color-base);}
-#header_wrap .inner { padding: 5px; }
+#header_wrap {
+  background: none;
+  background-color: var(--theme-color-base);
+}
+#header_wrap .inner {
+  padding: 5px;
+}
 
-#footer_wrap { background: none; background-color: var(--theme-color-base);}
-#footer_wrap a { text-decoration: none; font-weight: bold;}
-#footer_wrap a:hover { text-decoration: underline; }
+#footer_wrap {
+  background: none;
+  background-color: var(--theme-color-base);
+}
+#footer_wrap a {
+  text-decoration: none;
+  font-weight: bold;
+}
+#footer_wrap a:hover {
+  text-decoration: underline;
+}
 
-#main_content_wrap { background-color: var(--theme-color-super-light); border: none;}
-#main_content { padding-top: 25px; }
+#main_content_wrap {
+  background-color: var(--theme-color-super-light);
+  border: none;
+}
+#main_content {
+  padding-top: 25px;
+}
 
-#project_name { font-family: "ChangaOne"; font-style: italic; text-transform: uppercase; font-size: 48px; font-weight: 400; color: var(--theme-color-base) }
-#project_description { color: #778; }
-#project_description .anchor::before { content: ''}
+#project_name {
+  font-family: "ChangaOne";
+  font-style: italic;
+  text-transform: uppercase;
+  font-size: 48px;
+  font-weight: 400;
+  color: var(--theme-color-base);
+}
+#project_description {
+  color: #778;
+}
+#project_description .anchor::before {
+  content: "";
+}
 
-a { color: var(--theme-color-base); }
+a {
+  color: var(--theme-color-base);
+}
 
-#features { clear: both; display: table; }
+#features {
+  clear: both;
+  display: table;
+}
 
-.feature { text-align: center; width: 20%; padding: 20px; float: left; }
-.feature_icon_box { height: 110px;}
-.feature_icon_box:hover { transform: scale(1.05); }
-.feature img { width: 100px; border: 0px; }
+.feature {
+  text-align: center;
+  width: 20%;
+  padding: 20px;
+  float: left;
+}
+.feature_icon_box {
+  height: 110px;
+}
+.feature_icon_box:hover {
+  transform: scale(1.05);
+}
+.feature img {
+  width: 100px;
+  border: 0px;
+}
 
 #blogcontainer {
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .blogbox {
-	padding: 20px 20px 75px 20px;
-	margin: 10px;
-	flex-basis: 800px;
-	flex-grow: 1;
-	flex-shrink: 1;
-	background-color: var(--theme-color-very-light);
-	position: relative;
+  padding: 20px 20px 75px 20px;
+  margin: 10px;
+  flex-basis: 800px;
+  flex-grow: 1;
+  flex-shrink: 1;
+  background-color: var(--theme-color-very-light);
+  position: relative;
 }
 .readmore {
-	width: 100%;
-	text-align: center;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	margin-bottom: 20px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 20px;
 }
 .readmore a {
-	display: inline-block;
-	width: 180px;
-	background-color: var(--theme-color-light);
-	padding: 5px;
-	color: white;
+  display: inline-block;
+  width: 180px;
+  background-color: var(--theme-color-light);
+  padding: 5px;
+  color: white;
 }
 #showolder {
-	margin-top: 16px;
-	text-align: center;
+  margin-top: 16px;
+  text-align: center;
 }
 #showolder a {
-	display: inline-block;
-	width: 250px;
-	background-color: var(--theme-color-very-light);
-	color: var(--theme-color-dark);
-	padding: 5px;
+  display: inline-block;
+  width: 250px;
+  background-color: var(--theme-color-very-light);
+  color: var(--theme-color-dark);
+  padding: 5px;
 }
 
 .postdate {
-	font-style: italic;
-	text-align: right;
-	position: absolute;
-	right: 0
+  font-style: italic;
+  text-align: right;
+  position: absolute;
+  right: 0;
 }
 
 .light_block_title {
-	color: white;
-	text-shadow: var(--theme-color-dark) 0px 0px 10px;
+  color: white;
+  text-shadow: var(--theme-color-dark) 0px 0px 10px;
 }
 
 #search_form {
-	width: 100%; margin-bottom: 5px; padding: 0; background: transparent;
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 0;
+  background: transparent;
 }
 
 #search_input {
-	box-sizing: border-box; width: 100%; padding-right: 32px;
+  box-sizing: border-box;
+  width: 100%;
+  padding-right: 32px;
 }
 
 #search_button {
-	position: absolute;
-	top: 1px;
-	right: 0;
-	height: 28px;
-	width: 32px;
-	margin-left: -32px;
-    border: 0;
-	border-radius: 0px 3px 3px 0px;
-	background: #75abcf
+  position: absolute;
+  top: 1px;
+  right: 0;
+  height: 28px;
+  width: 32px;
+  margin-left: -32px;
+  border: 0;
+  border-radius: 0px 3px 3px 0px;
+  background: #75abcf;
 }
 
 #search_button img {
-	top: 3px;
-	left: -3px;
-	margin: 0;
-	padding: 0;
-	border: 0;
-	box-shadow: none;
+  top: 3px;
+  left: -3px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-shadow: none;
 }
 
 #search_results .light_block_title {
-	margin-left: 20px;
+  margin-left: 20px;
 }
 
 #search_results {
-	position: absolute;
-	background: var(--theme-color-light);
-	color: white;
-	width: 80%;
-	left: 10%;
-	top: 26px;
-	visibility: hidden;
-	box-shadow: var(--theme-color-dark) 0px 0px 30px;
+  position: absolute;
+  background: var(--theme-color-light);
+  color: white;
+  width: 80%;
+  left: 10%;
+  top: 26px;
+  visibility: hidden;
+  box-shadow: var(--theme-color-dark) 0px 0px 30px;
 }
 
 #search_results #close {
-	position: absolute;
-	right: 0px;
-	top: 0px;
-	margin: 5px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  margin: 5px;
 }
 
 #search_results #close img {
-	box-shadow: none;
-	border: none;
-	margin: 0;
-	cursor: pointer;
+  box-shadow: none;
+  border: none;
+  margin: 0;
+  cursor: pointer;
 }
 
 #search_results .item {
-	display: block;
-	background: var(--theme-color-very-light);
-	margin: 0px 20px 10px 20px;
-	text-decoration: none;
-	color: black;
-	padding: 10px;
+  display: block;
+  background: var(--theme-color-very-light);
+  margin: 0px 20px 10px 20px;
+  text-decoration: none;
+  color: black;
+  padding: 10px;
 }
 
 #search_results .title {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 #search_results .body {
-	max-height: 3.6em;
-	line-height: 1.2em;
-	overflow: hidden;
-	position: relative;
+  max-height: 3.6em;
+  line-height: 1.2em;
+  overflow: hidden;
+  position: relative;
 }
 
 #search_results .body:after {
-	content: "";
-	text-align: right;
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	width: 50%;
-	height: 1.2em;
-	background: linear-gradient(to right, rgba(255, 255, 255, 0), var(--theme-color-very-light) 90%);
-  }
+  content: "";
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 1.2em;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0),
+    var(--theme-color-very-light) 90%
+  );
+}
 
 #search_results .link {
-	color: var(--theme-color-base)
+  color: var(--theme-color-base);
 }
 
 #search_results .link:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 .search_term {
-	color: #600;
+  color: #600;
 }
 
+.anchor {
+  visibility: hidden;
+}
+.anchor:hover {
+  color: #c00000;
+}
+.anchor::before {
+  content: "\00A7";
+  position: absolute;
+  margin-left: -1.5ex;
+  display: block;
+  width: 1.5ex;
+  font-size: 0.85em;
+  padding-top: 0.15em;
+}
+h2:hover .anchor,
+h3:hover .anchor {
+  visibility: visible;
+}
 
-.anchor { visibility: hidden ;}
-.anchor:hover { color: #C00000; }
-.anchor::before { content: '\00A7'; position: absolute; margin-left: -1.5ex; display: block; width: 1.5ex; font-size: 0.85em; padding-top: 0.15em; }
-h2:hover .anchor, h3:hover .anchor { visibility: visible; }
-
-:target { -webkit-animation: target-fade 2s; -moz-animation: target-fade 2s; -o-animation: target-fade 2s; animation: target-fade 2s; }
+:target {
+  -webkit-animation: target-fade 2s;
+  -moz-animation: target-fade 2s;
+  -o-animation: target-fade 2s;
+  animation: target-fade 2s;
+}
 
 @-webkit-keyframes target-fade {
-	from { color: red; }
-	to { color: inherit; }
+  from {
+    color: red;
+  }
+  to {
+    color: inherit;
+  }
 }
 @-moz-keyframes target-fade {
-	from { color: red; }
-	to { color: inherit; }
+  from {
+    color: red;
+  }
+  to {
+    color: inherit;
+  }
 }
 @-o-keyframes target-fade {
-	from { color: red; }
-	to { color: inherit; }
+  from {
+    color: red;
+  }
+  to {
+    color: inherit;
+  }
 }
 @keyframes target-fade {
-	from { color: red; }
-	to { color: inherit; }
+  from {
+    color: red;
+  }
+  to {
+    color: inherit;
+  }
 }
 
-.prewrap { white-space: pre-wrap; }
-.hfterminal { color: #060; }
-.hfcaption { font-weight: bold; }
-.errorlog { color: #600; }
-.warnlog { color: #860; }
+.prewrap {
+  white-space: pre-wrap;
+}
+.hfterminal {
+  color: #060;
+}
+.hfcaption {
+  font-weight: bold;
+}
+.errorlog {
+  color: #600;
+}
+.warnlog {
+  color: #860;
+}
 
 .annotation[data-value]::after {
-	content: attr(data-value);
+  content: attr(data-value);
 }
 
 pre code .annotation[data-value]::after {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .annotation {
-	background: linear-gradient(0deg, var(--theme-color-base), var(--theme-color-light));
-	color: white;
-	border-radius: 100px;
-	width: 1.5em;
-	height: 1.5em;
-	display: inline-block;
-	text-align: center;
-	font-weight: bold;
-	font-size: 14px;
-	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  background: linear-gradient(
+    0deg,
+    var(--theme-color-base),
+    var(--theme-color-light)
+  );
+  color: white;
+  border-radius: 100px;
+  width: 1.5em;
+  height: 1.5em;
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal,
+    monospace;
 }
 
 pre code .annotation {
-	position: absolute;
+  position: absolute;
 }
 
 ul.annotation-comments {
-	list-style: none;
-	padding-left: 0;
+  list-style: none;
+  padding-left: 0;
 }
 
 .annotation-comments li {
-	margin-top: 10px;
+  margin-top: 10px;
+}
+
+// Courtesy of https://loading.io/css/
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  margin-left: -40px;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid var(--theme-color-base);
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: var(--theme-color-base) transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
