Zulip -> GitHub Discussions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -159,7 +159,7 @@
     <div id="footer_wrap">
       <footer class="inner" style="color: var(--theme-color-super-light)">
         Hyperfoil is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a><br>
-        You can reach us on <a href="https://hyperfoil.zulipchat.com/">Zulip</a>
+        You can reach us on <a href="https://github.com/Hyperfoil/Hyperfoil/discussions">GitHub Discussions</a>
       </footer>
     </div>
 
